# yt-event-notifier

./: .env.example  .gitignore  README.md  RUN_INSTR.md  TECH_DEBT.md  prd.md  pyproject.toml
src/: engine.py  handler.py  local_server.py  logging_config.py  main.py  poller.py
src/bot/: commands.py  messages.py
src/db/: client.py  queries.py  schema.py
src/ui/: api.py
src/ui/static/: app.js  index.html  style.css
src/youtube/: auth.py  client.py  oauth.py
tests/: test_cmd_check.py  test_cmd_help.py  test_cmd_removeslot.py  test_cmd_set_autocreate.py  test_cmd_setbroadcastdescription.py  test_cmd_setbroadcastmadeforkids.py  test_cmd_setbroadcastprivacy.py  test_cmd_setcheckwindow.py  test_cmd_setmessage.py  test_cmd_setreminder.py  test_cmd_settemplate.py  test_cmd_start.py  test_cmd_status.py  test_cmd_streams.py
