[project]
name = "yt-event-notifier"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot>=21.0",
    "google-api-python-client>=2.0",
    "google-auth-oauthlib>=1.0",
    "aiosqlite>=0.20",
    "boto3>=1.34",
    "aiohttp>=3.9",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
